--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ li {
 .number-heading {
   display: flex;
   align-items: center;
-  margin: 10px 0px 40px;
+  margin-bottom: 10px;
   width: 100%;
   font-size: clamp(26px,5vw,var(--fz-heading));
   white-space: nowrap;
