--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,46 @@ li {
   font-size: clamp(var(--fz-md),3vw,var(--fz-xl));
   font-weight: 400;
 }
+@-webkit-keyframes scale-up-hor-right {
+  0% {
+    -webkit-transform: scaleX(0.4);
+            transform: scaleX(0.4);
+    -webkit-transform-origin: 100% 100%;
+            transform-origin: 100% 100%;
+  }
+  100% {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+    -webkit-transform-origin: 100% 100%;
+            transform-origin: 100% 100%;
+  }
+}
+@keyframes scale-up-hor-right {
+  0% {
+    -webkit-transform: scaleX(0.4);
+            transform: scaleX(0.4);
+    -webkit-transform-origin: 100% 100%;
+            transform-origin: 100% 100%;
+  }
+  100% {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+    -webkit-transform-origin: 100% 100%;
+            transform-origin: 100% 100%;
+  }
+}
+
+@media screen and (max-width: 1080px) {
+     
+  .main {
+    padding: 0px 100px;
+  }
+  
+}
+@media screen and (max-width: 760px) {
+     
+  .main {
+    padding: 50px;
+  }
+  
+}
