--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,9 @@ body {
   line-height: 1.3;
   font-size: var(--fz-xl);
 }
+.app {
+  position: relative;
+}
 .main {
   padding: 0 150px;
 }
@@ -85,7 +88,7 @@ li {
   }
   
 }
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 768px) {
      
   .main {
     padding: 50px;
